@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.215 2005/06/23 03:04:00 jonb Exp $
+# $NetBSD: Makefile,v 1.216 2005/06/24 05:56:26 jlam Exp $
 #
 
 COMMENT=	Programming languages
@@ -76,7 +76,6 @@ SUBDIR+=	kaffe-esound
 SUBDIR+=	kaffe-x11
 SUBDIR+=	kali
 SUBDIR+=	ksi
-SUBDIR+=	libperl
 SUBDIR+=	librep
 SUBDIR+=	libtcl-nothread
 SUBDIR+=	lua
